# shirokumas

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml  python-testing.yml
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/commands/installation/: pip.txt
docs/source/sections/installation/: index.rst
docs/source/sections/reference/: index.rst
docs/source/sections/tutorial/: agg.rst  binarize.rst  count.rst  index.rst  null.rst  onehot.rst  ordinal.rst  target.rst
docs/source/sources/tutorial/: agg.txt  binarize.txt  count.txt  index.txt  null.txt  onehot.txt  ordinal.txt  target.txt
shirokumas/: __init__.py  _agg.py  _base.py  _binarize.py  _count.py  _exceptions.py  _null.py  _onehot.py  _oof.py  _ordinal.py  _target.py
tests/shirokumas/: test_agg.py  test_binarize.py  test_count.py  test_null.py  test_onehot.py  test_oof.py  test_ordinal.py  test_target.py
